--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="cell" data-number="7"></div>
     <div class="cell" data-number="8"></div>
 </div>
-    <button id="restart">Start again</button>
+    <button id="restart">RESTART</button>
     <span id="message"></span>
 
     <script src="script.js"></script>
